コードを整理して修正